syntax = "proto3";
package merges;
import "base.proto";
import "company.proto";

service MergeService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryMerge) returns (GetListResponse) {}
  rpc create(Merge) returns (GetOneResponse) {}
  rpc update(Merge) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}

message Merge {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 acquirerId = 7;
  optional int32 acquireeId = 8;
  optional int32 acquirerEquityPercentage = 9;
  optional string announcedDate = 10;
  optional string description = 11;
  optional double value = 12;
  optional Company acquirer = 13;
  optional Company acquiree = 14;
  optional string endDate = 15;
  optional File document = 16;
}

message QueryMerge {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional int32 acquirerId = 11;
  optional int32 acquireeId = 12;
  optional string announcedDate = 13;
  optional string description = 14;
  optional double value = 15;
  optional string endDate = 16;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated Merge data = 6;
}

message GetOneResponse {
  string message = 1;
  optional Merge data = 2;
}